<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minHeight="@dimen/dialog_minHeight">

    <TextView
        android:id="@+id/snoozeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snooze"
        android:textSize="@dimen/hugeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:orientation="vertical"
        android:paddingStart="@dimen/mediumMargin"
        android:paddingEnd="@dimen/mediumMargin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snoozeTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/minutes"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/snooze_5_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:stateListAnimator="@animator/decrease_size_normal_animator"
                android:text="@string/min5" />

            <Button
                android:id="@+id/snooze_30_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/smallMargin"
                android:stateListAnimator="@animator/decrease_size_normal_animator"
                android:text="@string/min30" />

            <Button
                android:id="@+id/snooze_60_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/smallMargin"
                android:stateListAnimator="@animator/decrease_size_normal_animator"
                android:text="@string/min60" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mediumMargin"
            android:text="@string/hours"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/snooze_4_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:stateListAnimator="@animator/decrease_size_normal_animator"
                android:text="@string/hours4" />

            <Button
                android:id="@+id/snooze_8_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/smallMargin"
                android:stateListAnimator="@animator/decrease_size_normal_animator"
                android:text="@string/hours8" />

            <Button
                android:id="@+id/snooze_24_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/smallMargin"
                android:stateListAnimator="@animator/decrease_size_normal_animator"
                android:text="@string/hours24" />
        </LinearLayout>

        <Button
            android:id="@+id/snoozeCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/bigMargin"
            android:stateListAnimator="@animator/decrease_size_normal_animator"
            android:text="@string/custom" />

    </LinearLayout>

    <Button
        android:id="@+id/snoozeCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/smallMargin"
        android:stateListAnimator="@animator/decrease_size_normal_animator"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>