<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_main_tasks">

    <fragment
        android:id="@+id/nav_main_tasks"
        android:name="com.pandacorp.taskui.presentation.ui.fragments.MainTasksFragment"
        android:label="@string/main_tasks"
        tools:layout="@layout/fragment_main_tasks" />

    <fragment
        android:id="@+id/nav_completed_tasks"
        android:name="com.pandacorp.taskui.presentation.ui.fragments.CompletedTasksFragment"
        android:label="@string/completed_tasks"
        tools:layout="@layout/fragment_completed_tasks" />

    <fragment
        android:id="@+id/nav_deleted_tasks"
        android:name="com.pandacorp.taskui.presentation.ui.fragments.DeletedTasksFragment"
        android:label="@string/deleted_tasks"
        tools:layout="@layout/fragment_deleted_tasks" />

</navigation>