<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:id="@+id/widget_dialog_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:padding="@dimen/bigDefaultMargin"
            android:forceDarkAllowed="false"
            android:layout_gravity="center"
            android:background="@drawable/rounded_blue_background"
            android:orientation="vertical"
            tools:targetApi="q"
            tools:background="@drawable/rounded_blue_background">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widgetSettings"
                android:layout_gravity="center"
                android:textSize="20sp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/showAddButtonSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaultMargin"
                        android:background="@null"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@animator/decrease_size_normal_animator" />

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/widgetShowFab"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">

                <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/showDarkThemeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaultMargin"
                        android:background="@null"
                        android:clickable="true"
                        android:focusable="true"
                        android:stateListAnimator="@animator/decrease_size_normal_animator" />

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/darkThemeForWidget"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/bigDefaultMargin"
                android:gravity="center">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/widgetSettingsCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stateListAnimator="@animator/decrease_size_normal_animator"
                    android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/widgetSettingsOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:stateListAnimator="@animator/decrease_size_normal_animator"
                    android:layout_marginStart="@dimen/bigDefaultMargin" />
        </LinearLayout>
    </LinearLayout>
</layout>