<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/appearanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumMargin"
            android:padding="8dp"
            android:text="@string/appearance"
            android:textSize="@dimen/normalText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/appearanceCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginEnd="@dimen/mediumMargin"
            app:cardBackgroundColor="?colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/appearanceTitle"
            app:layout_constraintStart_toStartOf="@+id/appearanceTitle"
            app:layout_constraintTop_toBottomOf="@id/appearanceTitle"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/stroke">

            <LinearLayout
                android:id="@+id/appearanceLayouts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/themeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/smallMargin"
                    android:paddingTop="@dimen/mediumMargin"
                    android:paddingEnd="@dimen/smallMargin"
                    android:paddingBottom="@dimen/mediumMargin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/mediumMargin"
                        android:paddingEnd="@dimen/mediumMargin"
                        android:src="@drawable/ic_settings_themes" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/mediumMargin"
                        android:paddingEnd="@dimen/mediumMargin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theme"
                            android:textSize="@dimen/mediumText" />

                        <TextView
                            android:id="@+id/themeTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?android:textColorSecondary"
                            android:textSize="@dimen/normalText"
                            tools:text="BlueTheme" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/languageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/smallMargin"
                    android:paddingTop="@dimen/mediumMargin"
                    android:paddingEnd="@dimen/smallMargin"
                    android:paddingBottom="@dimen/mediumMargin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/mediumMargin"
                        android:paddingEnd="@dimen/mediumMargin"
                        android:src="@drawable/ic_settings_language" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/mediumMargin"
                        android:paddingEnd="@dimen/mediumMargin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textSize="@dimen/mediumText" />

                        <TextView
                            android:id="@+id/languageTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?android:textColorSecondary"
                            android:textSize="@dimen/normalText"
                            tools:text="English" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/anotherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumMargin"
            android:padding="8dp"
            android:text="@string/another"
            android:textSize="@dimen/normalText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appearanceCardView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/versionCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginEnd="@dimen/mediumMargin"
            android:paddingTop="@dimen/mediumMargin"
            android:paddingBottom="@dimen/mediumMargin"
            app:cardBackgroundColor="?colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/anotherTitle"
            app:layout_constraintStart_toStartOf="@+id/anotherTitle"
            app:layout_constraintTop_toBottomOf="@id/anotherTitle"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/stroke">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/smallMargin"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/smallMargin"
                android:paddingTop="@dimen/mediumMargin"
                android:paddingEnd="@dimen/smallMargin"
                android:paddingBottom="@dimen/smallMargin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/mediumMargin"
                    android:paddingEnd="@dimen/mediumMargin"
                    android:src="@drawable/ic_settings_version" />

                <TextView
                    android:id="@+id/versionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/mediumMargin"
                    android:paddingTop="@dimen/mediumMargin"
                    android:paddingEnd="@dimen/smallMargin"
                    android:paddingBottom="@dimen/mediumMargin"
                    android:textSize="@dimen/normalText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/anotherTitle"
                    tools:text="Version 1.1.2" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
